@@ -11,7 +11,7 @@
           = f.text_field :website, :style => "width:240px"
         %td= spacer
         %td{ :valign => :top }
-          .label.top Tall-free phone:
+          .label.top Phone (tall-free):
           = f.text_field :tall_free_phone, :style => "width:240px"
       %tr
         %td{ :valign => :top }
