@@ -6,8 +6,9 @@
   %dt
     %b Target:
     = objectives.join(" | ")
-  %dt
+%dt
+  - unless objectives.empty?
     %b Actual:
-    = number_to_currency(campaign.actual_revenue || 0, :precision => 0) << " revenue | "
-    = pluralize(campaign.actual_leads || 0, "lead") << " | "
-    = number_to_percentage(campaign.actual_conversion || 0, :precision => 1) << " conversion"
+  = number_to_currency(campaign.actual_revenue || 0, :precision => 0) << " in revenue | "
+  = pluralize(campaign.actual_leads || 0, "lead") << " | "
+  = number_to_percentage(campaign.actual_conversion || 0, :precision => 1) << " conversion"
