@@ -1,0 +1,64 @@
+.form
+  - form_for @user, :url => profile_path do |f|
+    .title_menu
+      = link_to_function("Update notifications", %/alert("Not implemeneted yet.")/) + " | "
+      = link_to_function("Change password", %/alert("Not implemeneted yet.")/)
+    .title Edit Profile
+    = f.error_messages
+    .section
+      %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+        %tr
+          %td{ :valign => :top }
+            .label.top First name:
+            = f.text_field :first_name, :style => "width:240px"
+          %td= spacer
+          %td{ :valign => :top }
+            .label.top Last name:
+            = f.text_field :last_name, :style => "width:240px"
+        %tr
+          %td{ :valign => :top }
+            .label Title:
+            = f.text_field :title, :style => "width:240px"
+          %td= spacer
+          %td{ :valign => :top }
+            .label Company:
+            = f.text_field :company, :style => "width:240px"
+    .subtitle Contact Information
+    .section
+      %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+        %tr
+          %td{ :valign => :top, :colspan => 3 }
+            .label.top.req Email:
+            = f.text_field :email, :style => "width:240px"
+          %td= spacer
+          %td{ :valign => :top, :colspan => 3 }
+            .label.top Alternative email:
+            = f.text_field :alt_email, :style => "width:240px"
+        %tr
+          %td{ :valign => :top, :colspan => 3 }
+            .label Phone:
+            = f.text_field :phone, :style => "width:240px"
+          %td= spacer
+          %td{ :valign => :top, :colspan => 3 }
+            .label Mobile:
+            = f.text_field :mobile, :style => "width:240px"
+        %tr
+          %td{ :valign => :top }
+            .label AOL IM:
+            = f.text_field :aim, :style => "width:112px"
+          %td= spacer
+          %td{ :valign => :top }
+            .label Yahoo IM:
+            = f.text_field :yahoo, :style => "width:112px"
+          %td= spacer
+          %td{ :valign => :top }
+            .label Google IM:
+            = f.text_field :google, :style => "width:112px"
+          %td= spacer
+          %td{ :valign => :top }
+            .label Skype:
+            = f.text_field :skype, :style => "width:112px"
+    .buttonbar
+      = f.submit "Save"
+      or
+      = link_to "Cancel", profile_url
